@@ -98,6 +98,9 @@ const char* machine_get_id( libspectrum_machine type );
 
 int machine_set_timings( fuse_machine_info *machine );
 
+int machine_load_rom_bank_from_buffer( memory_page* bank_map, size_t which,
+                                       int page_num, unsigned char *buffer,
+                                       size_t length, int custom );
 int machine_load_rom_bank( memory_page* bank_map, size_t which, int page_num,
                            const char *filename, const char *fallback,
                            size_t expected_length );
